--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.airbnb.android:lottie:4.2.0'
     implementation 'com.apollographql.apollo:apollo-runtime:2.5.9'
+    implementation 'ir.tapsell.plus:tapsell-plus-sdk-android:2.1.3'
+    implementation 'com.google.android.gms:play-services-ads:20.4.0'
 }
