--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'androidx.work:work-runtime:2.7.0'
     implementation 'com.airbnb.android:lottie:4.2.0'
     implementation 'com.apollographql.apollo:apollo-runtime:2.5.9'
     implementation 'ir.tapsell.plus:tapsell-plus-sdk-android:2.1.3'
