--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion '31.0.0'
 
     defaultConfig {
-        applicationId "com.xeniac.warrantyroster"
+        applicationId "com.xeniac.warrantyrostermanager"
         minSdkVersion 21
         targetSdkVersion 31
         versionCode 1
