--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,19 @@
 plugins {
     id 'com.android.application'
     id 'androidx.navigation.safeargs'
-    id("com.apollographql.apollo").version("2.5.10")
+    id("com.apollographql.apollo").version("2.5.11")
 }
 
 android {
-    compileSdkVersion 31
-    buildToolsVersion '31.0.0'
+    compileSdkVersion 'android-Sv2'
+    buildToolsVersion '32.0.0 rc1'
 
     defaultConfig {
         applicationId "com.xeniac.warrantyrostermanager"
         minSdkVersion 21
         targetSdkVersion 31
-        versionCode 1
-        versionName "1.0.2"
+        versionCode 2
+        versionName "1.0.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -44,9 +44,9 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'androidx.core:core-splashscreen:1.0.0-alpha02'
@@ -55,9 +55,9 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'androidx.work:work-runtime:2.7.0'
-    implementation 'com.airbnb.android:lottie:4.2.0'
-    implementation 'com.apollographql.apollo:apollo-runtime:2.5.10'
-    implementation 'ir.tapsell.plus:tapsell-plus-sdk-android:2.1.3'
+    implementation 'androidx.work:work-runtime:2.7.1'
+    implementation 'com.airbnb.android:lottie:4.2.1'
+    implementation 'com.apollographql.apollo:apollo-runtime:2.5.11'
+    implementation 'ir.tapsell.plus:tapsell-plus-sdk-android:2.1.5'
     implementation 'com.google.android.gms:play-services-ads:20.4.0'
 }
