--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,15 +5,15 @@ plugins {
 }
 
 android {
-    compileSdkVersion 'android-Sv2'
+    compileSdkVersion 31
     buildToolsVersion '32.0.0 rc1'
 
     defaultConfig {
         applicationId "com.xeniac.warrantyrostermanager"
         minSdkVersion 21
         targetSdkVersion 31
-        versionCode 2
-        versionName "1.0.3"
+        versionCode 3
+        versionName "1.0.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
