--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'kotlin-android'
     id 'androidx.navigation.safeargs'
     id("com.apollographql.apollo").version("2.5.11")
 }
@@ -12,8 +13,8 @@ android {
         applicationId "com.xeniac.warrantyrostermanager"
         minSdkVersion 21
         targetSdkVersion 32
-        versionCode 3
-        versionName "1.0.4"
+        versionCode 4
+        versionName "1.1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -26,7 +27,6 @@ android {
 
     buildFeatures {
         viewBinding true
-        dataBinding true
     }
 
     buildTypes {
@@ -41,23 +41,47 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
 
 dependencies {
+    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    implementation 'androidx.navigation:navigation-fragment:2.3.5'
-    implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'androidx.core:core-splashscreen:1.0.0-alpha02'
-    implementation 'androidx.room:room-runtime:2.4.0'
-    annotationProcessor 'androidx.room:room-compiler:2.4.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'androidx.work:work-runtime:2.7.1'
+
+    //Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0-RC2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0-RC2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.0-RC2'
+
+    //Firebase
+    implementation platform('com.google.firebase:firebase-bom:29.0.2')
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.0.0'
+    implementation 'com.google.android.gms:play-services-auth:20.0.0'
+
+    //Navigation Component
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+
+    //Room Library
+    implementation 'androidx.room:room-runtime:2.4.0'
+    annotationProcessor 'androidx.room:room-compiler:2.4.0'
+
+    //Third Party Libraries
     implementation 'com.airbnb.android:lottie:4.2.2'
     implementation 'com.apollographql.apollo:apollo-runtime:2.5.11'
+
+    //Ads Libraries
     implementation 'ir.tapsell.plus:tapsell-plus-sdk-android:2.1.5'
     implementation 'com.google.android.gms:play-services-ads:20.5.0'
 }
