Connect Firebase to the Project

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,8 +65,9 @@ dependencies {
 
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:29.0.2')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.0.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.android.gms:play-services-auth:20.0.0'
 
     //Navigation Component
