--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'com.google.gms.google-services'
     id 'androidx.navigation.safeargs'
     id("com.apollographql.apollo").version("2.5.11")
 }
