--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    //id 'androidx.navigation.safeargs.kotlin' TODO uncomment after moving to kotlin
+    id 'androidx.navigation.safeargs' //TODO remove after moving to kotlin
     id 'com.google.gms.google-services'
-    id 'androidx.navigation.safeargs'
 }
 
 android {
@@ -68,6 +70,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx'
     implementation 'com.google.android.gms:play-services-auth:20.0.0'
 
     //Navigation Component
@@ -76,10 +79,15 @@ dependencies {
 
     //Room Library
     implementation 'androidx.room:room-runtime:2.4.0'
-    annotationProcessor 'androidx.room:room-compiler:2.4.0'
+    kapt 'androidx.room:room-compiler:2.4.0'
+    implementation 'androidx.room:room-ktx:2.4.0'
+    implementation 'androidx.room:room-runtime:2.4.0' //TODO remove after moving to kotlin
+    annotationProcessor 'androidx.room:room-compiler:2.4.0' //TODO remove after moving to kotlin
 
     //Third Party Libraries
     implementation 'com.airbnb.android:lottie:4.2.2'
+    implementation 'io.coil-kt:coil:1.4.0'
+    implementation 'io.coil-kt:coil-svg:1.4.0'
 
     //Ads Libraries
     implementation 'ir.tapsell.plus:tapsell-plus-sdk-android:2.1.5'
