--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,22 @@
 *.iml
 .gradle
 /local.properties
+/.idea/shelf
 /.idea/caches
 /.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/.idea/deploymentTargetDropDown.xml
+/.idea/gradle.xml
+/.idea/modules.xml
+/.idea/navEditor.xml
+/.idea/workspace.xml
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 .cxx
 local.properties
-/app/release/
-/app/obfuscation/
-/app/src/main/graphql/
-/app/src/main/dbschemas/
+/app/release
+/app/obfuscation
+/app/src/main/dbschemas
 /app/google-services.json
