--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,6 +1,5 @@
 /build
-/release/
-/obfuscation/
-/src/main/graphql/
-/src/main/dbschemas/
+/release
+/obfuscation
+/src/main/dbschemas
 google-services.json
