--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <!--TODO change backup attributes to true before release-->
     <application
-        android:name=".SubApplication"
+        android:name=".WarrantyRosterApplication"
         android:allowBackup="false"
         android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +16,7 @@
         android:supportsRtl="false"
         android:theme="@style/Theme.WarrantyRoster">
         <activity
-            android:name=".ui.landingactivity.LandingActivity"
+            android:name=".ui.landing.LandingActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.WarrantyRoster.Splash">
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.mainactivity.MainActivity"
+            android:name=".ui.main.MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.WarrantyRoster"
             android:windowSoftInputMode="adjustPan|stateHidden" />
