--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ plugins {
 
 android {
     compileSdkVersion 32
-    buildToolsVersion '32.0.0'
+    buildToolsVersion '32.1.0 rc1'
 
     defaultConfig {
         applicationId "com.xeniac.warrantyroster_manager"
