--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.1'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
-        //TODO AFTER RELEASE OF 2.4.1 STABLE, DOWNGRADE TO THE STABLE VERSION
-        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0-alpha01'
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1'
         classpath 'com.google.gms:google-services:4.3.10'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
