--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,10 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.0.4')
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
+    //Firebase App Check TODO USE BoM AFTER RELEASE OF THE STABLE VERSION
+    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0-beta04'
+    implementation 'com.google.firebase:firebase-appcheck-debug:16.0.0-beta04'
+
     //Firebase Auth
     implementation 'com.google.firebase:firebase-auth-ktx'
 
