Setup Firebase Crashlytics

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'androidx.navigation.safeargs.kotlin'
     id 'com.google.gms.google-services'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -77,12 +78,15 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
 
     //Firebase
-    implementation platform('com.google.firebase:firebase-bom:29.0.4')
-    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation platform('com.google.firebase:firebase-bom:29.1.0')
 
     //Firebase App Check TODO USE BoM AFTER RELEASE OF THE STABLE VERSION
     implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0-beta04'
     implementation 'com.google.firebase:firebase-appcheck-debug:16.0.0-beta04'
+
+    //Firebase Crashlytics
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 
     //Firebase Auth
     implementation 'com.google.firebase:firebase-auth-ktx'
