--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://artifacts.applovin.com/android' } //Applovin Ad Review Repo
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
@@ -12,6 +13,7 @@ buildscript {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.41'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
         classpath 'com.google.firebase:perf-plugin:1.4.1'
+        classpath 'com.applovin.quality:AppLovinQualityServiceGradlePlugin:4.3.7'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
