--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,13 +110,10 @@ dependencies {
     implementation 'io.coil-kt:coil:2.0.0-rc02'
     implementation 'io.coil-kt:coil-svg:2.0.0-rc02'
 
-    //Tapsell Libraries
+    //Ad Services Libraries
     implementation 'ir.tapsell.plus:tapsell-plus-sdk-android:2.1.6'
-    implementation 'com.google.android.gms:play-services-ads:20.6.0'
-
-    //AppLovin & AdColony Libraries
     implementation 'com.applovin:applovin-sdk:11.3.1'
-    implementation 'com.adcolony:sdk:4.7.0'
+    implementation 'com.google.android.gms:play-services-ads:20.6.0'
     implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
 
     //LeakCanary Library
