--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
+
     <!--TODO CHANGE SUPPORT_RTL AFTER ADDING PERSIAN-->
     <application
         android:name=".BaseApplication"
