--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,15 +73,15 @@ android {
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Dagger - Hilt
-    implementation 'com.google.dagger:hilt-android:2.41'
-    kapt 'com.google.dagger:hilt-compiler:2.41'
+    implementation 'com.google.dagger:hilt-android:2.42'
+    kapt 'com.google.dagger:hilt-compiler:2.42'
 
     // Architectural Components
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
@@ -105,12 +105,12 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
 
     // Firebase BoM and Analytics
-    implementation platform('com.google.firebase:firebase-bom:29.3.1')
+    implementation platform('com.google.firebase:firebase-bom:30.0.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
     // Firebase App Check TODO USE BoM AFTER RELEASE OF THE STABLE VERSION
-    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0-beta06'
-    implementation 'com.google.firebase:firebase-appcheck-debug:16.0.0-beta06'
+    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0'
+    implementation 'com.google.firebase:firebase-appcheck-debug:16.0.0'
 
     // Firebase Release & Monitor
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
@@ -128,8 +128,8 @@ dependencies {
     implementation 'com.airbnb.android:lottie:5.0.3'
 
     // Coil Library
-    implementation 'io.coil-kt:coil:2.0.0-rc03'
-    implementation 'io.coil-kt:coil-svg:2.0.0-rc03'
+    implementation 'io.coil-kt:coil:2.0.0'
+    implementation 'io.coil-kt:coil-svg:2.0.0'
 
     // Ad Services Libraries
     implementation 'ir.tapsell.plus:tapsell-plus-sdk-android:2.1.7'
